crates/alloy/tests/trybuild/no_provider_on_handle.rs
use cow_sdk_alloy::AlloyClientSignerHandle;
use cow_sdk_core::Provider;

fn requires_provider<P: Provider>() {}

fn main() {
    requires_provider::<AlloyClientSignerHandle>();
}
